fix 100vh on mobile

--- a/src/styles/layout/_l-onboarding.scss
+++ b/src/styles/layout/_l-onboarding.scss
@@ -12,6 +12,7 @@
   // max-height: 640px;
   // max-width: 380px;
   overflow: hidden;
+  min-height: -webkit-fill-available;
 
   .background {
     position: absolute;
@@ -190,6 +191,7 @@
 
     .dot-wrapper {
       justify-content: flex-start;
+      width: auto;
       // display: flex;
     }
 
